--- a/if.html
+++ b/if.html
@@ -21,7 +21,7 @@
       실행문5;<br />
       }<br />
     </code>
-    <dode> 삼항 연산자 ? : <br /> </dode>
+    <code> 삼항 연산자 ? : <br /> </code>
     <script>
       // var no = prompt("숫자를 입력하세요. : ");
       // if (no % 2) {
