--- a/function.html
+++ b/function.html
@@ -56,6 +56,7 @@
               <li>(function(매개변수,,,,){실행구문;,,,}(인수));</li>
               <li>페이지가 로딩될 때 즉시 실행</li>
               <li>jQuery</li>
+              <li>초기화 해야 하는 것들 사용할 때</li>
             </ul>
           </li>
           <li>
@@ -68,9 +69,7 @@
                 const sum = () => {로직};<br />
                 sum();
               </li>
-              <li>
-                onclick="(e) => {e.target.value}"
-              </li>
+              <li>onclick="(e) => {e.target.value}"</li>
             </ul>
           </li>
         </ul>
